# CV_test_task

./: .env-test  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
frontend/: Dockerfile
frontend/public/: index.html
frontend/src/: App.jsx  api.js
frontend/src/components/: AddResume.jsx  AuthForm.jsx  Resume.jsx  ResumeDetail.jsx  ResumeList.jsx
src/: config.py  database.py  logger.py  main.py
src/api/: auth.py  dependencies.py  resume.py
src/migrations/: env.py
src/migrations/versions/: 22937b6be355_add_jwt_model.py  d100e3360750_add_resumes_and_users_models.py
src/models/: __init__.py  jwt.py  resumes.py  users.py
src/repositiries/: base.py  jwt.py  resumes.py  users.py
src/schemas/: jwt.py  resumes.py  users.py
src/services/: auth.py
src/utils/: db_manager.py
tests/: conftest.py
tests/resumes/: test_resumes.py
